--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +13,7 @@
     <form action="">
       <label for="year">Enter a year:</label>
       <input type="number" id="year"> 
-      <button>Check if Leap Year</button>
+      <button>Check</button>
   </form>
   
     
